--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   migrations:
-    image: mediacms/mediacms:latest
+    image: omdbsd/mediacms:04-25-2024
     volumes:
       - ./:/home/mediacms.io/mediacms/
     environment:
@@ -22,11 +22,11 @@ services:
       db:
         condition: service_healthy
   web:
-    image: mediacms/mediacms:latest
+    image: omdbsd/mediacms:04-25-2024
     deploy:
       replicas: 1
     ports:
-      - "80:80"
+      - "8085:80"
     volumes:
       - ./:/home/mediacms.io/mediacms/
     environment:
@@ -37,7 +37,7 @@ services:
     depends_on:
       - migrations
   celery_beat:
-    image: mediacms/mediacms:latest
+    image: omdbsd/mediacms:04-25-2024
     volumes:
       - ./:/home/mediacms.io/mediacms/
     environment:
@@ -49,7 +49,7 @@ services:
     depends_on:
       - redis
   celery_worker:
-    image: mediacms/mediacms:latest
+    image: omdbsd/mediacms:04-25-2024
     deploy:
       replicas: 1
     volumes:
@@ -62,7 +62,7 @@ services:
     depends_on:
       - migrations
   db:
-    image: postgres:15.2-alpine
+    image: arm64v8/postgres:15-alpine
     volumes:
       - ../postgres_data:/var/lib/postgresql/data/
     restart: always
