--- a/.github/workflows/buildmediacms.yml
+++ b/.github/workflows/buildmediacms.yml
@@ -1,10 +1,9 @@
 name: Build and Push
 
+# Configure Manual Trigger
 on:
-  push:
-    branches:
-      - main
-
+  workflow_dispatch:
+    
 jobs:
   build-and-push:
 
